--- a/_config.yml
+++ b/_config.yml
@@ -12,12 +12,10 @@ urls:
       url: /
     - text: About
       url: /about
-    - text: Blog
+    - text: Blogs
       url: /blog
     - text: Gallery
       url: /gallery
-    - text: Shop
-      url : /shop
     - text: Contact
       url : /contact
 
