--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,15 +22,10 @@ jobs:
         if: success() && !contains(fromJSON('["gh-pages", "firebase", "none"]'), env.TARGET)
         run: echo 'Invalid Deployment Target' && exit 1
 
-      # gh actions doesn't support using the 'env' context on job level ifs for
-      # some reason smh. here we use outputs instead
       - name: set output to deploy target
         id: set-output
         run: echo "::set-output name=target::${{ env.TARGET }}"
 
-  # not sure if anyone wants this but I'm putting this here for those that don't
-  # want to host their site. else the actions will show an annoying x whenever
-  # you push to master
   deploy-none:
     runs-on: ubuntu-latest
     needs: set-deploy-type
@@ -42,22 +37,30 @@ jobs:
     runs-on: ubuntu-latest
     needs: set-deploy-type
     if: needs.set-deploy-type.outputs.target == 'gh-pages'
-
     steps:
       - uses: actions/checkout@v4
 
-      - name: Deploy Jekyll Site
-        uses: sujaykundu777/jekyll-deploy-action@1.0.5
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_REPOSITORY: ${{ secrets.GITHUB_REPOSITORY }}
-          GITHUB_ACTOR: ${{ secrets.GITHUB_ACTOR }}
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+
+      - name: Install dependencies
+        run: bundle install
+
+      - name: Build Jekyll site
+        run: bundle exec jekyll build
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./_site
 
   deploy-firebase:
     runs-on: ubuntu-latest
     needs: set-deploy-type
     if: needs.set-deploy-type.outputs.target == 'firebase'
-
     steps:
       - uses: actions/checkout@v4
 
