--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: timmy.xyz
 subtitle: My Graphics Adventures.
 description: >- # this means to ignore newlines until "baseurl:"
-  devlopr-jekyll is a beautiful Jekyll Theme Built For Developers, which is optimized for speed and readability.
+  My Learning progress over the years.
 
 url: "https://timethyh.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
