--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   My Learning progress over the years.
 
 url: "https://timethyh.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/TimethyH.github.io" # the subpath of your site, e.g. /blog
 
 # Navigation
 urls:
