--- a/_data/galleries/overview.yml
+++ b/_data/galleries/overview.yml
@@ -1,7 +1,7 @@
 
 -
   title: Y1 Block A
-  directory: /gallery/y1a
+  directory: y1a
   preview:
     filename: Y1A1.png
     original: Y1A1.png
@@ -10,7 +10,7 @@
     thumbnail: Y1A1.png
 -
   title: Y1 Block C
-  directory: /gallery/y1c
+  directory: y1c
   preview:
     filename: Y1C.png
     original: Y1C.png
@@ -19,7 +19,7 @@
     thumbnail: Y1C.png
 -
   title: Y1 Block D
-  directory: /gallery/y1d
+  directory: y1d
   preview:
     filename: Y1D.png
     original: Y1D.png
@@ -28,10 +28,10 @@
     thumbnail: Y1D.png
 -
   title: Y2 PS5 Project
-  directory: /gallery/ps5
+  directory: ps5
   preview:
-    filename: Y1D.png
-    original: Y1D.png
+    filename: helmet.png
+    original: helmet.png
     sizes:
-    - Y1D.png
-    thumbnail: Y1D.png
+    - helmet.png
+    thumbnail: helmet.png
