--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ author_work_experiences:
 
 # Education
 author_education_details:
-              - college_logo: mit.png
+              - college_logo: buas.png
                 college_name: Breda University
                 college_url: https://www.buas.nl/
                 college_degree: Creative Media and Game Technologies
@@ -106,9 +106,9 @@ highlighter: rouge
 permalink: pretty
 
 # Choose what to show ( can be true or false)
-show_author_work_experiences: true
+show_author_work_experiences: false
 show_author_education_details: true
-show_author_project_details: true
+show_author_project_details: false
 
 # pagination of posts
 paginate: 4
