--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ urls:
 
 author_logo: Timmy.png
 author: Timmy
-author_bio: Hi, my name is Timethy. This is my digital playground.
+author_bio: Hi, my name is Timethy. I am currently a Year 2 student at Breda University, specializing in Graphics.
 author_email: "timethy.hyman@gmail.com"
 author_location: Netherlands
 author_website_url: "https://timethyh.github.io"
