--- a/_data/galleries/y2vr.yml
+++ b/_data/galleries/y2vr.yml
@@ -7,13 +7,13 @@ pictures:
     thumbnail: fogThumb.png
 
   - title: "VR Fog Week 3"
-    caption: "Looking more organic. Accomplished by baking noise and fbm calculations in a 3D texture."
+    caption: "Static more organic cloud."
     type: video
     video_src: staticCloud.mp4
     thumbnail: fogThumb.png
 
   - title: "VR Fog Week 3"
-    caption: "Looking more organic. Accomplished by baking noise and fbm calculations in a 3D texture."
+    caption: "Dynamic Fog, Accomplished by baking noise and fbm calculations in a 3D texture."
     type: video
-    video_src: DynamiFog.mp4
+    video_src: DynamicFog.mp4
     thumbnail: fogThumb.png
