--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -33,7 +33,7 @@ johndoe:
 Timmy:
     name: Timethy Hyman # Name of the Author
     username: Timmy # Username of the Author
-    bio: "Hi I'm Timmy, an aspiring grahics programmer." # Author Bio
+    bio: "Timmy, an aspiring grahics programmer." # Author Bio
     site: https://timethyh.github.io # Author Website URL
     avatar: Timmy.png  # Profile Image (img path will be /assets/img/authors/johndoe.png)
     email: timethy.hyman@gmail.com  # Author Email address
