VR Project start

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: timmy.xyz
+title: Timethy Hyman
 subtitle: My Graphics Adventures.
 description: >- # this means to ignore newlines until "baseurl:"
   My Learning progress over the years.
