--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -35,7 +35,7 @@ Timmy:
     username: Timmy # Username of the Author
     bio: "Timmy, an aspiring grahics programmer." # Author Bio
     site: https://timethyh.github.io # Author Website URL
-    avatar: Timmy.png  # Profile Image (img path will be /assets/img/authors/johndoe.png)
+    avatar: Timmy.webp  # Profile Image (img path will be /assets/img/authors/johndoe.png)
     email: timethy.hyman@gmail.com  # Author Email address
     social:  # Author Social profile links
         - title: "github"
