--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ urls:
 
 # Edit Author details (For multi authors check _data/authors.yml)
 
-author_logo: Timmy.webp
+author_logo: TimmyThumb.webp
 author: Timmy
 author_bio: Hi, my name is Timethy. I am currently a Year 2 student at Breda University, specializing in Graphics.
 author_email: "timethy.hyman@gmail.com"
