config personal data update

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Timethy Hyman
+title: Timethy Hyman - Graphics Programmer
 subtitle: My Graphics Adventures.
 description: >- # this means to ignore newlines until "baseurl:"
-  My Learning progress over the years.
+  Portofolio of Timethy Hyman, a graphics programmer interested in Math, Custom Engines and cool effects.
 
 url: "https://timethyh.github.io" # the base hostname & protocol for your site, e.g. https://example.github.io
 baseurl: "" # the subpath of your site, e.g. /blog
