water video update and godot RT gif

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Timethy Hyman - Graphics Programmer
-subtitle: My Graphics Adventures.
+title: Timethy Hyman
+subtitle: Graphics Programmer.
 description: >- # this means to ignore newlines until "baseurl:"
   Portofolio of Timethy Hyman, a graphics programmer interested in Math, Custom Engines and cool effects.
 
